ocaso/environments/base/nginx-app/deployment.yaml
---
# Source: ocaso-nginx-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocaso-nginx-app
  labels:
    app.kubernetes.io/name: ocaso-nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ocaso-nginx-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ocaso-nginx-app
    spec:
      containers:
        - name: ocaso-nginx-app
          image: nginxdemos/nginx-hello:plain-text
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            null
