ocaso/environments/base/nginx-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ocaso-nginx-app
  name: ocaso-nginx-app
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: ocaso-nginx-app
  type: ClusterIP
