ocaso/environments/base/nginx-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocaso-nginx-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ocaso-nginx-app
